--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">FinalProject</string>
+    <string name="user_name">Username :</string>
+    <string name="password">Password :</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="register_now">Register Now</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm_password">Confirm Password :</string>
 </resources>
