--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="register_now">Register Now</string>
     <string name="cancel">Cancel</string>
     <string name="confirm_password">Confirm Password :</string>
+    <string name="confirm_to_exit">Confirm to exit?</string>
+    <string name="NOTICE">NOTICE</string>
+    <string name="Confirm">Confirm</string>
 </resources>
