dialog_bg_transparent_effect
dialog_bg_transparent_effect

--- a/MyApplication_V1/app/src/main/res/values/strings.xml
+++ b/MyApplication_V1/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
 
 
     <!-- for test layout / Lyris -->
+    <string name="testtext">Test</string>
     <string name="testvalue">222</string>
 </resources>
