--- a/MyApplication_V1/app/src/main/res/values/strings.xml
+++ b/MyApplication_V1/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
+
     <string name="app_name">MarvelBattle</string>
+
+    <!-- activity_menu -->
+
+
+    <!-- activity_login & activity_registration -->
     <string name="user_name">USERNAME :</string>
     <string name="password">PASSWORD :</string>
     <string name="login">Login</string>
@@ -7,6 +13,9 @@
     <string name="register_now">Register Now</string>
     <string name="cancel">Cancel</string>
     <string name="confirm_password">CONFIRM:</string>
+    <string name="login_cipher_pw">Display Password ?</string>
+
+    <!-- activity_map -->
     <string name="confirm_to_exit">Confirm to exit?</string>
     <string name="NOTICE">NOTICE</string>
     <string name="Confirm">Confirm</string>
@@ -17,6 +26,11 @@
     <string name="location5">5</string>
     <string name="DropCard">Drop Card</string>
     <string name="Go">Go</string>
+
+    <!-- activity_gamepage -->
+
+
+    <!-- dialog_location -->
 
 
     <!-- for test layout / Lyris -->
