--- a/MyApplication_V1/app/src/main/res/values/strings.xml
+++ b/MyApplication_V1/app/src/main/res/values/strings.xml
@@ -29,7 +29,27 @@
     <string name="Back">BACK</string>
     <string name="UserName">UserName</string>
 
-
+    <!-- carddrop activity cards name-->
+    <string-array name="cards_name">
+        <item>card_r_beast</item>
+        <item>card_r_hawkeye</item>
+        <item>card_r_hulk</item>
+        <item>card_r_magneto</item>
+        <item>card_r_mystique</item>
+        <item>card_r_panther</item>
+        <item>card_r_torch</item>
+        <item>card_r_vision</item>
+        <item>card_r_winter</item>
+        <item>card_sr_blackwidow</item>
+        <item>card_sr_deadpool</item>
+        <item>card_sr_ironman</item>
+        <item>card_sr_loki</item>
+        <item>card_sr_thor</item>
+        <item>card_sr_wolverine</item>
+        <item>card_ssr_ca</item>
+        <item>card_ssr_dr</item>
+        <item>card_ssr_spiderman</item>
+    </string-array>
 
     <!-- activity_gamepage-->
 
