--- a/MyApplication_V1/app/src/main/res/values/strings.xml
+++ b/MyApplication_V1/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">MarvelBattle</string>
 
     <!-- activity_menu -->
-
+    <string name="menu_hint">Touch to Start Battle...</string>
 
     <!-- activity_login & activity_registration -->
     <string name="user_name">USERNAME :</string>
@@ -52,7 +52,7 @@
     </string-array>
 
     <!-- activity_battle-->
-    <string name="battle_loading_text">Loading...</string>
+    <string name="battle_searching_text">Searching...</string>
 
 
     <!-- dialog_location -->
