全部图片修改为1280 部分960 卡牌减小223X333

--- a/MyApplication_V1/app/src/main/res/values/strings.xml
+++ b/MyApplication_V1/app/src/main/res/values/strings.xml
@@ -59,6 +59,6 @@
 
 
     <!-- for test layout / Lyris -->
-    <string name="testtext">Test</string>
-    <string name="testvalue">222</string>
+    <string name="testtext"></string>
+    <string name="testvalue"></string>
 </resources>
